--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
   application:
         name: test
+        
   datasource:
-    url: jdbc:postgresql://localhost:5432/testdb
+    url: jdbc:postgresql://host.docker.internal:5432/testdb
     username: postgres
     password: 786@admin
     driver-class-name: org.postgresql.Driver
